minor updates removing debugging

--- a/addons/footer.html
+++ b/addons/footer.html
@@ -30,7 +30,7 @@
             margin: auto;
             height: 100%;
             display: flex;
-            justify-content: end;
+            justify-content: space-between;
             align-items: center;
         }
 
@@ -44,6 +44,9 @@
 <body>
     <footer>
         <div class="footer-inner">
+            <div class="footer-logout">
+                <a href="logout.php"><i class="fa-solid fa-right-from-bracket" style="color: #000000; font-size: 20px;"></i></a>
+            </div>
             <div class="footer-logo">
                 <img src="img/footer-logo.png" alt="">
             </div>
