--- a/addons/footer.html
+++ b/addons/footer.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     *{
@@ -40,12 +41,24 @@
             height: auto;
         }
 
+        .footer-logout {
+            display: flex;
+            align-items: center;
+        }
+
+        .footer-logout a {
+            font-size: 18px;
+            font-weight: 600;
+            color: black;
+        }
+
 </style>
+
 <body>
     <footer>
         <div class="footer-inner">
             <div class="footer-logout">
-                <a href="logout.php"><i class="fa-solid fa-right-from-bracket" style="color: #000000; font-size: 20px;"></i></a>
+                    <a href="logout.php">Izlogoties <i class="fa-solid fa-right-from-bracket" style="color: black; font-size: 18px;"></i></a>
             </div>
             <div class="footer-logo">
                 <img src="img/footer-logo.png" alt="">
